# askama-htmx-axum

./: Cargo.toml
src/: main.rs
templates/: index.html  shift.html
