[package]
name = "shift-one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axohtml = "0.5.0"
axum = { version = "0.6.20", features = ["tracing"] }
color-eyre = "0.6.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
